Added styling to dog and cat container

--- a/index.html
+++ b/index.html
@@ -12,9 +12,33 @@
     <!-- Generate dog and cat images. -->
     <div class="container">
       <h1>Generate dog and cat images.</h1>
-      <!-- cat container -->
+      <div class="main-container">
+        <!-- cat container -->
+        <div class="cat-container">
+          <div class="img-cat">
+            <img
+              src="https://images.pexels.com/photos/45201/kitty-cat-kitten-pet-45201.jpeg?auto=compress&cs=tinysrgb&w=400"
+              alt=""
+              class="cat-img"
+            />
+          </div>
 
-      <!-- dog container -->
+          <button class="get-cat">get cat</button>
+        </div>
+
+        <!-- dog container -->
+        <div class="dog-container">
+          <div class="img-dog">
+            <img
+              src="https://images.pexels.com/photos/45201/kitty-cat-kitten-pet-45201.jpeg?auto=compress&cs=tinysrgb&w=400"
+              alt=""
+              class="dog-img"
+            />
+          </div>
+
+          <button class="get-dog">get dog</button>
+        </div>
+      </div>
     </div>
   </body>
 </html>
