--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="dog-container">
           <div class="img-dog">
             <img
-              src="https://images.pexels.com/photos/45201/kitty-cat-kitten-pet-45201.jpeg?auto=compress&cs=tinysrgb&w=400"
+              src="https://images.unsplash.com/photo-1504595403659-9088ce801e29?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OXx8ZG9nc3xlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60"
               alt=""
               class="dog-img"
             />
