--- a/5. Anime App/index.html
+++ b/5. Anime App/index.html
@@ -13,6 +13,16 @@
     <div class="main-container">
       <div class="anime-container">
         <h3>Anime Pics Generator</h3>
+        <h2>genreates Random Anime profile pics</h2>
+        <button id="btn" class="get-btn">Get Anime</button>
+        <div class="anime-box">
+          <div class="hero-img">
+            <img src="" class="anime" alt="" />
+          </div>
+          <div class="hero-name">
+            <h3></h3>
+          </div>
+        </div>
       </div>
     </div>
   </body>
