Updated Styles.css and Changed ClassName of button

--- a/5. Anime App/index.html
+++ b/5. Anime App/index.html
@@ -14,7 +14,7 @@
       <div class="anime-container">
         <h3>Anime Pics Generator</h3>
         <h2>genreates Random Anime profile pics</h2>
-        <button id="btn" class="get-btn">Get Anime</button>
+        <button id="btn" class="get-anime">Get Anime</button>
         <div class="anime-box">
           <div class="hero-img">
             <img src="" class="anime" alt="" />
