--- a/8. Quote Generator/index.html
+++ b/8. Quote Generator/index.html
@@ -8,5 +8,11 @@
     <link rel="stylesheet" href="styles.css" />
     <script src="script.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <h2>Genrates Random Quotes</h2>
+      <div class="quote" id="quote">// Quotes goes here</div>
+      <button class="btn" id="btn">Get Another Quote</button>
+    </div>
+  </body>
 </html>
