Quote Generator completed

--- a/8. Quote Generator/index.html
+++ b/8. Quote Generator/index.html
@@ -12,6 +12,7 @@
     <div class="container">
       <h2>Genrates Random Quotes</h2>
       <div class="quote" id="quote">// Quotes goes here</div>
+      <p class="author">"Author Name</p>
       <button class="btn" id="btn">Get Another Quote</button>
     </div>
   </body>
